fixed homepage flicker, header onchange class

--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -7,7 +7,7 @@
   display: flex
   flex-direction: column
   z-index: 1
-  overflow: hidden
+  // overflow: hidden
   color: white
   &--project
     .hero__title
@@ -16,8 +16,12 @@
 
   &__background
     position: absolute 0
+    max-width: 100vw
+    overflow: hidden
     font-size: 0
     z-index: 1
+    backface-visibility: hidden
+    transform-style: preserve-3d
     img, video
       position: absolute
       top: 50%
@@ -36,8 +40,10 @@
     z-index: 3
     margin: auto 0
     padding: 120px 0 60px
-    margin-left: 10%
-    transition: .5s $easing
+    backface-visibility: hidden
+    transform-style: preserve-3d
+    transform: translate3d(10%,0,0)
+    // transition: .5s $easing
     .container
       display: flex
       flex-direction: column
